<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jedeboer.doorpi.MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_register"
        android:title="@string/action_register"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_manage"
        android:title="@string/action_manage"
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rename"
        android:title="@string/action_rename"
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
