<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textview_explain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register_explanation"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="0dp"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5sp"
        app:layout_constraintTop_toBottomOf="@+id/textview_explain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/register_hint_name" />

    <EditText
        android:id="@+id/edittext_registrationcode"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/edittext_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_scan"
        android:hint="@string/register_hint_code" />

    <ImageButton
        android:id="@+id/button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5sp"
        android:src="@drawable/ic_camera_alt_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/edittext_name"
        app:layout_constraintLeft_toRightOf="@id/edittext_registrationcode"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="Scan QR Code" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_marginTop="5sp"
        app:layout_constraintTop_toBottomOf="@id/edittext_registrationcode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textview_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/button_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>